ensureDB + Coupon improvements
- new EP: simpleshop.Settings.saved added
- Setting.init method added (moved package_include EP from boot into this method)
- ensure_db_structure logic added (coupon.php)
- coupon options extended
- setting.general bugfix
- add multiple order notification email devided by ,

--- a/install/lang/en.csv
+++ b/install/lang/en.csv
@@ -81,6 +81,7 @@ label.order_complete_default_shipping_text;The items will be sent as soon as pos
 error.email_already_exists;This email address is already in use
 error.coupon_not_exists;This coupon-code does not exist
 error.coupon_not_valid_anymore;This coupon-code has expired
+error.coupon_already_used;You have already used this coupon
 label.email;E-mail
 label.units;
 label.single_price;Single price
