--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,11 +1,13 @@
 orders_export = Bestellungs-Export
 
+label.prefix = Prefix
 label.advanced_settings = Erweiterte Einstellungen
 label.overview = Übersicht
 label.category = Kategorie
 label.name = Bezeichnung
 label.amount = Menge
 label.weight = Gewicht
+label.start_date = Start-Datum
 label.variants = Varianten
 label.order_no = Bestellnr.
 label.customer = Kunde
@@ -87,6 +89,14 @@ settings.content_rma = Wiederrufsrecht
 settings.shop_functions = Shop-Funktionen
 settings.category_linking_label = Kategorie-Verlinkungen
 settings.category_linking_input_label = Schnell-Verlinkung im Backend aktivieren
+
+coupon.use_settings = Nutzungs-Einstellungen
+coupon.use_info = Bestellhistorie
+coupon.fixed_discount = Rabatt als Fix-Betrag
+coupon.percent_discount = [- ODER -] Rabatt als Prozentwert
+coupon.use_global = Kann mehrfach/global genutzt werden (1 code = N-Bestellungen)
+coupon.use_fixedprice = Ist solange gültig wie der Fixrabatt nicht ausgeschöpft ist
+coupon.use_single = Kann exakt 1 mal verwendet werden
 
 yform_values.coupon_functions_description = Funktionen für Coupon-Codes
 yform_values.order_functions_description = Funktionen für Bestelldokumente
