--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -7,31 +7,43 @@ label.category = Kategorie
 label.name = Bezeichnung
 label.amount = Menge
 label.weight = Gewicht
+label.internal_notes = interne Notizen
 label.start_date = Start-Datum
 label.variants = Varianten
+label.ref_order_label = Gutschrift-Rechnungs-Referenz
 label.order_no = Bestellnr.
+label.coupon_code_notice = Code wird beim Speichern automatisch erstellt
 label.customer = Kunde
 label.order_sum = Bestellsumme
 label.orders = Bestellungen
 label.net_single_price = Netto-Einzelpreis
+label.net_prices = Nettopriese
 label.no_orders_export = Keine Bestellungen zum Export verfügbar
 label.data_saved = Daten gespeichert
 label.orders_export_info_text = Wählen Sie hier die Bestellungen aus die sie exportieren wollen.
 label.orders_export = %d Bestellungen exportieren
 label.filter = Filter
 label.all = Alle
+label.coupon_end_date = wenn das Datum leer bleibt, ist der Code unbeschränkt gültig
 label.activated = aktiviert
+label.initial_total = Ausgangssumme
+label.products = Produkte sortieren
 label.sort_products = Produkte sortieren
 label.packing_list_title = Lieferschein
 label.shipping_address = Lieferadresse
 label.return_address = Absenderadresse
 label.product_list = Produktliste
 label.product = Produkt
+label.b2b_tax_required = B2B ist steuerpflichtig
+label.manual_discount = manueller Rabatt
+label.discount_sum = Rabattsumme
+label.customer_data = Kundendaten
 label.accounting = Buchhaltung
 label.what_u_want_todo = Was wollen Sie tun?
 label.really_delete_entry = Wollen Sie wirklich den Eintrag löschen?
 label.resend_email = Bestellungs-Email an Kunde senden
 label.show_order_pdf = PDF ansehen
+label.shipping_key = Versandschlüssel
 label.recalculate_sums = Werte neu berechnen
 label.msg_resend_email = Email wurde versendet
 label.msg_recalculate_sums = Werte wurden aktualisiert
