--- a/install/lang/en.csv
+++ b/install/lang/en.csv
@@ -5,6 +5,7 @@ action.abort;Abort
 action.use_coupon;Apply coupon
 shop.order_status_CA;cancelled
 shop.order_status_CL;closed
+shop.order_status_CN;Credit note
 action.logout;Sign Out
 label.edit_address;Edit address
 label.new_address;New address
@@ -13,7 +14,7 @@ label.address;Address
 action.add_address;Add Address
 action.close;close
 label.email__user_registration_subject;You have successfully registered
-simpleshop.account_area_addresses;Addresses
+label.addresses;Addresses
 label.email__registration_optin_text;You have registered with ###company.name## and must click on the link below to activate your account:
 label.reg_activation_already_done;You have already activated your account
 label.login_success_overlay;You have successfully registered and can now continue
@@ -30,8 +31,8 @@ label.email__user_password_reset;Password reset
 label.all;All
 label.remarks_infos;Remarks / infos
 label.province;Province
+label.saved;Saved
 label.customer_type;I'm a...
-label.use_existing_addredss;Use existing address
 label.redirect_to_plugin_payment_page;You are now directed to the payment interface of {NAME}
 error.token_already_used_for_transaction;The payment has already been made in another transaction
 label.order_placed_but_pending;The order has been successfully created and is still waiting for payment to be completed.
@@ -78,7 +79,7 @@ label.add_to_cart_success;The article has been successfully added to your shoppi
 label.payment_cancelled;The payment process was aborted
 label.details;Details
 label.order_complete_default_shipping_text;The items will be sent as soon as possible
-error.email_already_exists;This email address is already in use
+error.email_already_exists;This email address is already in use by another user
 error.coupon_not_exists;This coupon-code does not exist
 error.coupon_not_valid_anymore;This coupon-code has expired
 error.coupon_already_used;You have already used this coupon
@@ -131,6 +132,11 @@ label.lastname;Last Name
 label.name;Name
 label.location;City
 label.password;Password
+label.new_password;New password
+label.repeat_email;Repeat email
+label.repeat_password;Repeat password
+error.email_not_identical_to_repeat;The email and the repetition must be identical
+error.new_password_not_identical_to_repeat;The password and the repetition must be identical
 label.password_forgotten;Forgot your password?
 label.paypal_express;Paypal
 label.postal;ZIP
@@ -147,7 +153,6 @@ label.invoice_address;Billing Address
 label.pwd_recovery_info_text;Enter your email address and we will send you a new password.
 label.invoice_num;Invoice nr.
 label.registration_info_text;Register your personal account.
-simpleshop.account_area_rma;RMA
 simpleshop.shipping_pickup_point;Collection by the Customer
 label.shipping_number;Shipment number
 label.login_info_text;Already have an account? login here.
@@ -155,11 +160,8 @@ label.registration_sucessfull;Your have successfully registered. You may continu
 label.applied_promotion_text;These are your promotions:
 error.tos_rma_not_accepted;You are required to accept the terms & conditions and the cancellation terms
 label.order_complete_pickup_text;We will inform you as soon as the items are ready to be picked up.
-
-Business hours:
-Monday - Thursday from 8:00 to 17:00
-Friday from 8:00 to 14:00 (later possible by request)"
 label.are_required_fields;are required fields
+label.auth_data;Login data
 action.save;Save
 label.omest_shipping_ec;Standard / Economy
 label.shipping_default;Standard Shipping
@@ -170,7 +172,6 @@ label.street;Street
 label.overview;
 label.keep_password_notice;Skip this field if you wish to proceed with the old password
 label.shipping_address;Shipping Address
-label.shipping_address_is_idem;The shipping address is the same as the billing address
 label.shipping_method;Shipping Method
 label.shipping_costs;Shipping Costs
 shop.order_status_SH;shipped
