--- a/install/lang/it.csv
+++ b/install/lang/it.csv
@@ -12,6 +12,7 @@ shop.order_status_CN;Nota di credito
 action.logout;Esci
 simpleshop.account_area_account;Account
 label.address;Indirizzo
+label.pages;Pagine
 action.add_address;Aggiungi indirizzo
 action.close;chiudere
 label.addresses;Indirizzi
