--- a/lang/en_en.lang
+++ b/lang/en_en.lang
@@ -82,5 +82,18 @@ settings.content_rma =Right of revocation
 settings.shop_functions = Shop features
 settings.category_linking_label = Category links
 settings.category_linking_input_label = Activate quick linking in the backend
+coupon.use_settings = Usage settings
+coupon.use_info = Order history
+coupon.fixed_discount = Discount as fixed amount
+coupon.free_shipping = Free shipping
+coupon.generate_code = send coupon
+coupon.code_generate_notice = the selected code will be cloned and sent to the customer via email after completion of the order
+coupon.percent_discount = Discount in percent
+coupon.global_use_single = Can be used by all customers exactly 1x
+coupon.use_global = Can be used infinitely often by all customers
+coupon.use_fixedprice = Is valid as long as the fixed discount is not exhausted
+coupon.use_single = Can be used by one customer exactly one time
+label.coupon_end_date = if the date remains blank, the code is valid indefinitely
+label.end_date = End date
 yform_values.coupon_functions_description =Coupon code functions
 yform_values.order_functions_description = Functions for order documents
