--- a/lang/it_it.lang
+++ b/lang/it_it.lang
@@ -82,5 +82,18 @@ settings.content_rma = Diritto di revoca
 settings.shop_functions = Funzioni del shop
 settings.category_linking_label = Link alle categorie
 settings.category_linking_input_label = Attivare il collegamento rapido nel backend
+coupon.use_settings = Impostazioni d'uso
+coupon.use_info = Elenco degli ordini
+coupon.fixed_discount = Sconto come importo fisso
+coupon.free_shipping = Spedizione gratuita
+coupon.generate_code = Invia coupon
+coupon.code_generate_notice = il codice selezionato sarà clonato e inviato al cliente via e-mail dopo il completamento dell'ordine
+coupon.percent_discount = Sconto in percento
+coupon.global_use_single = Può essere utilizzato da tutti i clienti esattamente 1x
+coupon.use_global = Può essere utilizzato sempre da tutti i clienti
+coupon.use_fixedprice = È valido fino a quando non si esaurisce lo sconto fisso
+coupon.use_single = Può essere utilizzato da un cliente esattamente una volta
+label.coupon_end_date = se la data rimane vuota, il codice è valido a tempo indeterminato
+label.end_date = Data di fine
 yform_values.coupon_functions_description = Funzioni per i codici coupon
 yform_values.order_functions_description = Funzioni per i documenti dell'ordine
