--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -6,6 +6,7 @@ label.overview = Übersicht
 label.category = Kategorie
 label.name = Bezeichnung
 label.amount = Menge
+label.b2b_amount = Produkt-Enheiten in B2B-Kommission
 label.weight = Gewicht
 label.internal_notes = interne Notizen
 label.start_date = Start-Datum
@@ -15,10 +16,12 @@ label.order_no = Bestellnr.
 label.coupon_code_notice = Code wird beim Speichern automatisch erstellt
 label.coupon = Coupon Code
 label.target = Ziel
+label.customer_id = Kunden-ID
 label.customer = Kunde
 label.order_sum = Bestellsumme
 label.orders = Bestellungen
 label.net_single_price = Netto-Einzelpreis
+label.reduced_net_single_price = Reduzierter Netto-Einzelpreis (Angebotspreis)
 label.net_prices = Nettopriese
 label.no_orders_export = Keine Bestellungen zum Export verfügbar
 label.data_saved = Daten gespeichert
@@ -26,9 +29,11 @@ label.orders_export_info_text = Wählen Sie hier die Bestellungen aus die sie ex
 label.orders_export = %d Bestellungen exportieren
 label.filter = Filter
 label.all = Alle
+label.last_login = Letzter Login
 label.discount = Rabatt
 label.coupon_end_date = wenn das Datum leer bleibt, ist der Code unbeschränkt gültig
 label.activated = aktiviert
+label.actived_on = Aktiviert am
 label.initial_total = Ausgangssumme
 label.products = Produkte sortieren
 label.sort_products = Produkte sortieren
@@ -37,6 +42,7 @@ label.shipping_address = Lieferadresse
 label.return_address = Absenderadresse
 label.product_list = Produktliste
 label.product = Produkt
+label.product_type = Produkt-Typ
 label.b2b_tax_required = B2B ist steuerpflichtig
 label.manual_discount = manueller Rabatt
 label.discount_sum = Rabattsumme
@@ -63,6 +69,16 @@ label.at_least_amount = Mindestanzahl an Produkt im Warenkorb
 label.link_product_rex_categories = Kategorien verlinken
 label.sort_products_for_cat_title = Produkte sortieren in der Kategorie: "{CATNAME}"
 label.save_order_for_order_products = Sie müssen zuerst die Bestellung erstellen, erst dann können Sie Produkte hinzufügen. Klicken Sie einfach am Ende der Seite auf "Übernehmen"
+label.inventory = Artikelbestand
+label.track_inventory = verfolgen
+label.not_tack_inventory = nicht verfolgen
+label.inventory_notice = wenn Inventar nicht verfolgt wird muss man bei Menge 1 (= verfügbar) oder 0 (= nicht verfügbar) eintragen
+label.product_length = Länge in mm
+label.product_width = Breite in mm
+label.product_height = Höhe in mm
+label.product_weight = Gewicht in g
+label.features = Eigenschaften
+label.related_products = zugehörige Produkte
 
 
 action.goto_creditnote = gehe zur Gutschrift
@@ -87,6 +103,11 @@ error.cannot_delete_value = Der Wert "{{name}}" kann nicht gelöscht werden da f
 error.no_product_choosen = Kein Produkt ausgewählt
 error.product_has_attribute = Das Produkt hat keine Eigenschaften zugewiesen. Klicken Sie {{link}}hier{{/link}} und weisen sie Eigenschaften zu.
 error.product_has_no_attribute_but_variants = Das Produkt hat keine Eigenschaften zugewiesen, jedoch existieren aber Varianten mit folgenden Eigenschaften:
+error.link_customer_address = Bitte die Adresse einem Kunden zuweisen
+error.link_country = Bitte ein Land auswählen
+error.empty_product_code = Bitte geben Sie die Produkt-Kodex ein
+error.unique_product_code = Der angegeben Produkt-Kodex wird bereits für ein anderes Produkt verwendet
+error.link_tax = Bitte Steuersatz auswählen
 
 settings.order_settings = Bestellungs-Einstellungen
 settings.min_order_value = Mindestbestellwert
@@ -127,4 +148,7 @@ yform_values.order_functions_description = Funktionen für Bestelldokumente
 
 tablename.discount_group = Rabattaktionen
 tablename.coupon = Gutscheine
+tablename.customer = Kunden
+tablename.customer_address = Kundenadressen
+tablename.product = Produkte
 tablename.order = Bestellungen
